<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameSetting" android:background="@android:color/white">

    <TextView
            android:text="@string/gameSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/settingMaxTurn"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_maxTurn"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <android.support.v7.widget.AppCompatSeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintTop_toBottomOf="@+id/tv_maxTurn"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="8dp" android:id="@+id/slideMaxTurn"/>
    <TextView
            android:text="@string/settingMaxColor"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_maxColor"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/slideMaxTurn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <android.support.v7.widget.AppCompatSeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintTop_toBottomOf="@+id/tv_maxColor"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="8dp" android:id="@+id/slideMaxColor"/>
    <TextView
            android:text="@string/settingMaxLength"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_maxLength"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/slideMaxColor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <android.support.v7.widget.AppCompatSeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintTop_toBottomOf="@+id/tv_maxLength"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="8dp" android:id="@+id/slideMaxLength"/>
    <TextView
            android:text="0"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valueMaxTurn" app:layout_constraintStart_toEndOf="@+id/tv_maxTurn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_maxTurn"
            app:layout_constraintBottom_toBottomOf="@+id/tv_maxTurn"/>
    <TextView
            android:text="0"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valueMaxColor"
            app:layout_constraintTop_toTopOf="@+id/tv_maxColor"
            app:layout_constraintBottom_toBottomOf="@+id/tv_maxColor" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_maxColor" android:layout_marginStart="8dp"/>
    <TextView
            android:text="0"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valueMaxLength"
            app:layout_constraintTop_toTopOf="@+id/tv_maxLength"
            app:layout_constraintBottom_toBottomOf="@+id/tv_maxLength"
            app:layout_constraintStart_toEndOf="@+id/tv_maxLength" android:layout_marginStart="8dp"/>
    <android.support.v7.widget.AppCompatButton
            android:onClick="startNewGame"
            android:text="Start New Game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartGame" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/slideMaxLength"/>
</android.support.constraint.ConstraintLayout>